# napari-cupy-image-processing

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  tox.ini
.circleci/: config.yml
.napari/: config.yml
docs/: demo.ipynb
napari_cupy_image_processing/: __init__.py  _cupy_image_processing.py  _function.py
napari_cupy_image_processing/_tests/: test_function.py
