[metadata]
name = napari-cupy-image-processing
version = 0.1.2
author = Robert Haase
author_email = robert.haase@tu-dresden.de
url = https://github.com/haesleinhuepf/napari-cupy-image-processing
license = MIT
description = GPU-accelerated image processing using CUDA
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/napari-cupy-image-processing/issues
    Documentation = https://github.com/haesleinhuepf/napari-cupy-image-processing#README.md
    Source Code = https://github.com/haesleinhuepf/napari-cupy-image-processing
    User Support = https://github.com/haesleinhuepf/napari-cupy-image-processing/issues

[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    toolz
    cupy
    napari-tools-menu
    scikit-image


[options.entry_points] 
napari.plugin = 
    napari-cupy-image-processing = napari_cupy_image_processing
